# SCANeR-Samples-Pack

./: .gitignore  LICENSE.md  README.md  README_dev.md  licence.md
APIs/: CMakeLists.txt  example.csv
APIs/DockerCompute/: README.txt
APIs/DockerCompute/run/: README.txt  launch.sh
APIs/DockerCompute/run/sample/: configurations.cfg
APIs/DockerCompute/run/sample/config/: Process.xfg  datafile.cfg
APIs/DockerCompute/run/sample/data/scenario/ADAS/: AEB_EVAL_ADAS_CTRL 18.sce  AEB_EVAL_ADAS_CTRL 23.sce  AEB_EVAL_ADAS_CTRL 3.sce  AEB_EVAL_ADAS_CTRL 31.sce  AEB_EVAL_ADAS_CTRL 35.sce  AEB_EVAL_ADAS_CTRL 46.sce  AEB_EVAL_ADAS_CTRL 49.sce  AEB_EVAL_ADAS_CTRL 55.sce  AEB_EVAL_ADAS_CTRL 7.sce
APIs/samples/: CMakeLists.txt  evaluation.sln
APIs/samples/AFS_API/MatrixBeam10_Dual/simulink_r2013/: afsMatrixBeam.slx  afsMatrixBeam_DEFAULT.slx
APIs/samples/AFS_API/MatrixBeam10_Dual/simulink_r2016b/: afsMatrixBeam.slx  isInBeam.slx  toLightSourceRef.slx
APIs/samples/EVALUATION_APIs/AFS_API/MatrixBeam10_Dual/simulink_r2013/: isInBeam.slx  toLightSourceRef.slx
APIs/samples/EVALUATION_APIs/AFS_API/MatrixBeam10_Dual/simulink_r2016b/: Thumbs.db  afsMatrixBeam.slx
APIs/samples/EVALUATION_APIs/RTGatewayIO/: RTGatewayIO.cpp  RTGatewayIO.vcxproj  UDPSocket.h
APIs/samples/EVALUATION_APIs/ScanerAPI/EVAL_ADAS/cpp/: eval_adas.vcxproj
APIs/samples/EVALUATION_APIs/ScanerAPI/EVAL_ADAS/python/: eval_adas.py  scaner.py
APIs/samples/EVALUATION_APIs/ScanerAPI/EVAL_DATAEXCHANGE/: eval_dataexchange.cpp  eval_dataexchange.vcxproj
APIs/samples/EVALUATION_APIs/ScanerAPI/EVAL_LATERAL_CTRL/cpp/: eval_lateral_ctrl.vcxproj
APIs/samples/EVALUATION_APIs/ScanerAPI/EVAL_LONGITUDINAL_CTRL/cpp/: eval_longitudinal_ctrl2.vcxproj
APIs/samples/EVALUATION_APIs/ScanerAPI/EVAL_LONGITUDINAL_CTRL/python/: eval_longitudinal_ctrl_pedalPos.py
APIs/samples/EVALUATION_APIs/ScanerAPI/EVAL_LONGITUDINAL_CTRL/simulink/: eval_longitudinal_ctrl_accel.slx  eval_longitudinal_ctrl_pedalPos.slx
APIs/samples/Imports/KML_trajectory/: AachenMainTrajectory.kml  hostvehicle.csv  import.py
APIs/samples/RTGatewayIO/: RTGatewayIO.vcxproj  UDPProtocol.cpp  UDPProtocol.h  UDPSocket.cpp
APIs/samples/ScanerAPI/: CMakeLists.txt
APIs/samples/ScanerAPI/ADAS/AEB/: AEB.cpp  AEB.vcxproj
APIs/samples/ScanerAPI/ADAS/adas_acc/: adas_acc.cpp  adas_acc.vcxproj
APIs/samples/ScanerAPI/ADAS/adas_acc_simulink/: adas_acc_simulink.mdl
APIs/samples/ScanerAPI/ADAS/adas_lka/: adas_lka.cpp  adas_lka.vcxproj
APIs/samples/ScanerAPI/EVAL_ADAS/cpp/: eval_adas.cpp  eval_adas.vcxproj
APIs/samples/ScanerAPI/EVAL_ADAS/python/: eval_adas.py  scaner.py
APIs/samples/ScanerAPI/EVAL_DATAEXCHANGE/: eval_dataexchange.vcxproj
APIs/samples/ScanerAPI/EVAL_LATERAL_CTRL/cpp/: eval_lateral_ctrl.cpp  eval_lateral_ctrl.vcxproj
APIs/samples/ScanerAPI/EVAL_LONGITUDINAL_CTRL/cpp/: eval_longitudinal_ctrl2.vcxproj  eval_longitudinal_ctrl_speed.cpp
APIs/samples/ScanerAPI/EVAL_LONGITUDINAL_CTRL/python/: eval_longitudinal_ctrl_accel.py  eval_longitudinal_ctrl_pedalPos.py  eval_longitudinal_ctrl_speed.py  scaner.py
APIs/samples/ScanerAPI/EVAL_LONGITUDINAL_CTRL/simulink/: eval_longitudinal_ctrl_accel.slx  eval_longitudinal_ctrl_pedalPos.slx  eval_longitudinal_ctrl_speed.slx
APIs/samples/ScanerAPI/SUT_AEB/: CMakeLists.txt  sut_aeb.cpp  sut_aeb.res  sut_aeb.vcxproj  sut_aeb_l.cpp
APIs/samples/ScanerAPI/SUT_AEB_W/: sut_aeb.vcxproj  sut_aeb_w.cpp  sut_aeb_w.vcxproj
APIs/samples/ScanerAPI/SampleCom/NTComunication/: NTComunication.cpp  NTComunication.vcxproj
APIs/samples/ScanerAPI/SampleHeadlight/ScanerAPISensorsViewerPixelLighting/: ObjectBoundingBox.cpp  ObjectBoundingBox.h  ObjectBoundingBox2D.cpp  ObjectBoundingBox2D.h  Picto3D.cpp  Picto3D.h  ScanerAPISensorsViewerPixelLighting.vcxproj  ScanerAPISensorsViewerPixelLighting.vcxproj.filters  SensorViewerPixelLightingConfig.cpp  SensorViewerPixelLightingConfig.h  SensorsViewer.cpp  SensorsViewer.h  main.cpp
APIs/samples/ScanerAPI/sampleADAS/targetsDetection/: targetsDetection.cpp  targetsDetection.vcxproj
APIs/samples/VEN/VENSCANeRGateway/: VENSCANeRGateway.cpp  VENSCANeRGateway.vcxproj
APIs/samples/VEN/VENSender/: VENSender.cpp  VENSender.vcxproj
APIs/samples/VehicleDynamics/RemoteVehicleModel/EVAL_ADAS_EXTERNALVEHICLE/: ComVhcDyn.mexw64  RemoteVehicleModel_Callas.slx  sfun_rttime.cpp  vehicle.vhc
APIs/samples/VehicleDynamics/RemoteVehicleModel/EVAL_ADAS_EXTERNALVEHICLE/include/Callas/: CallasPlugin.cpp  CallasPlugin.h  (+2 more)
APIs/samples/VehicleDynamics/RemoteVehicleModel/EVAL_ADAS_EXTERNALVEHICLE/source/: ComVhcDyn.cpp  ComVhcDynHelper.cpp  ComVhcDynHelper.h  ComVhcDyn_wrapper.cpp  cal_reseau.h  cal_reseau_Posix.cpp  cal_reseau_win32.cpp  cal_timer.h  cal_timer_Posix.cpp  cal_timer_win32.cpp
APIs/samples/VehiclePlayer/ConvertFromXML/: convert.py  example.xml
APIs/samples/VehiclePlayer/ConvertFromXML/example_terrain/: example.osm
APIs/samples/VehiclePlayer/ConvertFromXML/example_vhlplayer/: hostvehicle.csv  hostvehicle.gpx  hostvehicle.vhplayer
APIs/samples/VehiclePlayer/ConvertFromXML/template/: template.vhplayer  template_Bike.mdl  template_Car.mdl
(+832 files in other folders)
