SET(TARGET_NAME "SUT_AEB")

ADD_EXECUTABLE(${TARGET_NAME}  
sut_aeb.cpp
)

# Copy res file aside binary
ADD_CUSTOM_COMMAND(
    TARGET ${TARGET_NAME}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/sut_aeb.res" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/"
    VERBATIM)

TARGET_LINK_LIBRARIES(${TARGET_NAME} 
	                 ${SCANER_API_LIB})
